styles/style.css
* {
  margin: 0;
  padding: 0;
}

body {
  font: large Arial, Helvetica, sans-serif;
  padding-bottom:20px;
  /*background-color:#f2f2f2;*/
  background:url(../images/NLM_main_background.png)
}

hr {
  margin-top:1em;
  margin-bottom:1em;
}

h1, h2, h3, h4 {
  color: #105981 !important;
}

h1 {
  text-align:center;
  margin-top:1em;
}

p {
  margin-bottom: .5em;
}

.content > h3, .content > h2, .content h4 {
  margin-top:1em;
  margin-bottom:1em;
}

.content > p, .content > ul {

width:90%;
  
}

#logo-container {
  width:100%;
  float:left;
  background-color:#254062;
  border-bottom:2px double #9CC4E4;
}

.breadcrumbs {
  width:auto;
  font-size:75%;
  margin-bottom:1em;
  color:#254062;
}

.left-nav {
  width:15%;
  color:#9b0000;
  float:left;
  padding:2em 1em 1em 1em;
}

.meta-nav {
  float:right;
  padding:0em 7em 0em 0em;
  margin-top:2em;
}

.meta-nav a {
  color:white;
  text-decoration: none;
}

.left-nav ul {
  list-style-type: none;
}

.left-nav ul li {
  line-height: 1.5em;
}

.left-nav ul li a:hover {
  color: #F26C4F;
}

.left-nav ul li a {
  color: #082735;
  font-weight: bolder;
  font-size:90%;
}

.main-container {
  float:left;
  width:100%;
  background:url(../images/husk.png) repeat;
  
}

.content {
  box-shadow: -2px 0px 10px 1px #777;
  float:left;
  width:70%;
  margin-top:1em;
  padding:2em 0em 2em 2em;
  background-color:white;
  
}

.rdf-graph {
  max-width:700px;
}


pre, .sample-queries {
  margin-top:1em;
  margin-bottom:1em;
  padding: .5em;
  max-width:80%;
  border:dashed 1px #ccc;
  background:url(../images/paper_fibers.png) repeat;
}


#footer {
  float:left;
  background-color:#254062;
  color:white;
  width:100%;
  padding: 1em 0em 1em 1em;
  border-top:2px double #9CC4E4;
}

.ui-tabs .ui-tabs-nav li {
   font-size:small;
   width:30%;
   padding:0em .5em 0em .5em;
   text-wrap: unrestricted; 
}

.data-table-standard, .data-table-long {
  
  font-size:.75em;
  width: 95% !important;
  

#tabs {
  
  margin-bottom:1em;
}

